# exifregistry

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml  publish.yml
src/: backup.ts  cli.ts  completion.ts  config.ts  contact.ts  display.ts  dupes.ts  engine.ts  fields.ts  frame.ts  history.ts  index.ts  interactive.ts  markdown.ts  organizer.ts  pattern.ts  query.ts  resize.ts  stats.ts  tz.ts
src/exifkit/: cli.py  display.py  interactive.py
tests/: backup.test.ts  cli.test.ts  commands.test.ts  conftest.py  display.test.ts  engine.test.ts  fields.test.ts  fixtures.ts  frame.test.ts  markdown.test.ts  organizer.test.ts  pattern.test.ts  qol.test.ts  resize.test.ts  test_cli.py  test_engine.py  test_fields.py  undo.test.ts
