[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exif-kit"
version = "0.1.0"
description = "A friendly command-line toolkit for photographers to inspect and edit photo/video metadata (EXIF, GPS, dates)."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Davi Arndt" }]
requires-python = ">=3.10"
keywords = ["exif", "metadata", "photography", "gps", "exiftool", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "questionary>=2.0",
]

[project.urls]
Homepage = "https://github.com/daviarndt/exif-kit"
Issues = "https://github.com/daviarndt/exif-kit/issues"

[project.scripts]
exifkit = "exifkit.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/exifkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
